cleanup classes and add class diagram for assignment 8